--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,13 +1,14 @@
-name: Deploy Storybook to GitHub Pages
+name: Build and Deploy
 
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -18,8 +19,9 @@ jobs:
       - name: Build Storybook
         run: npm run build-storybook
 
-      - name: Deploy to GitHub Pages
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
           folder: storybook-static
