--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "rollup -c",
     "storybook": "storybook dev -p 6006",
-    "build:storybook": "storybook build"
+    "build:storybook": "storybook build",
+    "test": "jest --watch"
   },
   "author": "",
   "license": "ISC",
@@ -21,12 +22,22 @@
     "@storybook/react": "^8.6.7",
     "@storybook/react-vite": "^8.6.7",
     "@storybook/test": "^8.6.7",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "playwright": "^1.51.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-import-sort": "^0.0.7",
     "rollup": "^4.36.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "sass": "^1.86.0",
     "storybook": "^8.6.7",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1"
   }
 }
