build: change deps

--- a/package.json
+++ b/package.json
@@ -14,14 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
-    "@storybook/addon-essentials": "^8.6.7",
-    "@storybook/addon-onboarding": "^8.6.7",
     "@storybook/blocks": "^8.6.7",
-    "@storybook/experimental-addon-test": "^8.6.7",
     "@storybook/react": "^8.6.7",
     "@storybook/react-vite": "^8.6.7",
-    "@storybook/test": "^8.6.7",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "husky": "^9.1.7",
@@ -38,6 +33,9 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "classnames": "^2.5.1"
+    "@types/react": "^19.0.12",
+    "classnames": "^2.5.1",
+    "react": "^19.0.0",
+    "react-doom": "^1.0.0"
   }
 }
